@@ -1,5 +1,6 @@
 var util = require("util"),
-    BufferedStream = require("bufferedstream");
+    BufferedStream = require("bufferedstream"),
+    strata = require("./index");
 
 /**
  * A middleware that wraps the response body in a JavaScript callback function
@@ -8,28 +9,37 @@ var util = require("util"),
 module.exports = function (app, callbackName) {
     callbackName = callbackName || "callback";
 
-    var header = callbackName + "(",
-        footer = ")",
-        wrapperLength = Buffer.byteLength(header + footer);
-
     return function jsonp(env, callback) {
-        app(env, function (status, headers, body) {
-            if (headers["Content-Type"] === "application/json") {
-                body = new Body(header, footer, body);
+        var req = strata.Request(env);
 
-                // It's JavaScript now!
-                headers["Content-Type"] = "application/javascript";
-
-                // Add on the wrapper length to Content-Length if it is set.
-                if ("Content-Length" in headers) {
-                    var length = parseInt(headers["Content-Length"], 10) || 0;
-                    length += wrapperLength;
-
-                    headers["Content-Length"] = length.toString();
-                }
+        req.params(function (err, params) {
+            if (err && strata.handleError(err, env, callback)) {
+                return;
             }
 
-            callback(status, headers, body);
+            var cbName = params.callback || callbackName,
+                header = cbName + "(",
+                footer = ")",
+                wrapperLength = Buffer.byteLength(header + footer);
+
+            app(env, function (status, headers, body) {
+                if (headers["Content-Type"] === "application/json") {
+                    body = new Body(header, footer, body);
+
+                    // It's JavaScript now!
+                    headers["Content-Type"] = "application/javascript";
+
+                    // Add on the wrapper length to Content-Length if it is set.
+                    if ("Content-Length" in headers) {
+                        var length = parseInt(headers["Content-Length"], 10) || 0;
+                        length += wrapperLength;
+
+                        headers["Content-Length"] = length.toString();
+                    }
+                }
+
+                callback(status, headers, body);
+            });
         });
     }
 };
