@@ -4,8 +4,8 @@ var assert = require("assert"),
     jsonp = require("./../lib/jsonp"),
     BufferedStream = require("bufferedstream");
 
-vows.describe("gzip").addBatch({
-    "A gzip middleware": {
+vows.describe("jsonp").addBatch({
+    "A jsonp middleware": {
         "with a string body": {
             topic: function () {
                 this.body = JSON.stringify({message: "Hello world!"});
@@ -21,6 +21,40 @@ vows.describe("gzip").addBatch({
                 assert.equal(headers["Content-Type"], "application/javascript");
                 var expect = "callback(" + this.body + ")";
                 assert.equal(body, expect);
+            },
+            "with a custom callback name": {
+                topic: function () {
+                    this.body = JSON.stringify({message: "Hello world!"});
+
+                    var self = this;
+                    var app = jsonp(function (env, callback) {
+                        callback(200, {"Content-Type": "application/json"}, self.body);
+                    }, "aCallback");
+
+                    mock.request("", app, this.callback);
+                },
+                "should wrap it in a JavaScript callback with that name": function (err, status, headers, body) {
+                    assert.equal(headers["Content-Type"], "application/javascript");
+                    var expect = "aCallback(" + this.body + ")";
+                    assert.equal(body, expect);
+                },
+                "when the request contains a `callback` parameter": {
+                    topic: function () {
+                        this.body = JSON.stringify({message: "Hello world!"});
+
+                        var self = this;
+                        var app = jsonp(function (env, callback) {
+                            callback(200, {"Content-Type": "application/json"}, self.body);
+                        }, "aCallback");
+
+                        mock.request("/?callback=customCallback", app, this.callback);
+                    },
+                    "should wrap it in a JavaScript callback with the name in that parameter": function (err, status, headers, body) {
+                        assert.equal(headers["Content-Type"], "application/javascript");
+                        var expect = "customCallback(" + this.body + ")";
+                        assert.equal(body, expect);
+                    }
+                }
             }
         },
         "with a Stream body": {
